--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 
 .navbar {
   background: #fbff1f;
+  z-index: 3;
 }
 
 .navbar-img {
@@ -48,20 +49,20 @@
 }
 
 .home-stripe {
+
   position: absolute;
-  top: 10%;
-  left: ;
-    z-index: 2;
-  height: 50vh;
-      width: 50vh;
-  border-left: 100px solid #ff4136;
-  border-right: 100px solid transparent;
-  border-bottom: 100px solid transparent;
-  border-top: 100px solid #ff4136;
-/*
-background: rgb(157,21,255);
-background: linear-gradient(0deg, rgba(157,21,255,1) 0%, rgba(250,164,52,1) 50%, rgba(251,255,31,1) 100%);
-*/
+  top: -45%;
+  left: -25%;
+
+  z-index: 2;
+
+  height: 150vh;
+  width: 75vw;
+
+  /* background: #fbff1f; */
+  transform:rotate(25deg);
+  background: rgb(157,21,255);
+  background: linear-gradient(345deg, rgba(157,21,255,1) 0%, rgba(250,52,219,1) 0%, rgba(251,255,31,1) 56%);
 }
 
 .home-title {
@@ -90,14 +91,8 @@ background: linear-gradient(0deg, rgba(157,21,255,1) 0%, rgba(250,164,52,1) 50%,
 
   background-color: #fff;
 
-}
+  overflow: hidden;
 
-#navbar-username {
-  left: 52.5vw;
-}
-
-#logout {
-  left: 15vw;
 }
 
 #signin-button {
@@ -124,5 +119,5 @@ background: linear-gradient(0deg, rgba(157,21,255,1) 0%, rgba(250,164,52,1) 50%,
 }
 
 html {
-  overflow: hidden;
+  overflow-x: hidden;
 }
