--- a/css/index.css
+++ b/css/index.css
@@ -67,8 +67,8 @@
 
 .home-title {
   position: absolute;
-  margin-top: 10vh;
-  margin-left: 5vw;
+  top: 25%;
+  left: 5%;
   font-size: 10vw;
   font-weight: 800;
   z-index: 5;
@@ -76,8 +76,8 @@
 
 .home-subtitle {
   position: absolute;
-  margin-top: 50vh;
-  margin-left: 5vw;
+  top: 65%;
+  left: 5%;
   font-size: 3vw;
   font-weight: 800;
   font-style: italic;
@@ -86,12 +86,13 @@
 
 #home {
 
+  margin:0 ! important;
+  padding:0 ! important;
+
   width: 100%;
   height: 85vh;
 
   background-color: #fff;
-
-  overflow: hidden;
 
 }
 
@@ -113,8 +114,8 @@
 }
 
 #map {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 85vh;
   z-index: 1;
 }
 
