--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,9 @@
 
+.container {
+  margin:0 ! important;
+  padding:0 ! important;
+}
+
 .navbar {
   background: #fbff1f;
   z-index: 3;
@@ -51,18 +56,17 @@
 .home-stripe {
 
   position: absolute;
-  top: -45%;
-  left: -25%;
+  top: 90%;
 
   z-index: 2;
 
-  height: 150vh;
-  width: 75vw;
+  height: 100vh;
+  width: 33vw;
 
   /* background: #fbff1f; */
-  transform:rotate(25deg);
-  background: rgb(157,21,255);
-  background: linear-gradient(345deg, rgba(157,21,255,1) 0%, rgba(250,52,219,1) 0%, rgba(251,255,31,1) 56%);
+  transform:rotate(0deg);
+  background: rgb(250,52,219);
+  background: linear-gradient(3deg, rgba(250,52,219,1) 42%, rgba(251,71,198,1) 79%, rgba(251,120,153,1) 100%, rgba(251,101,170,1) 100%, rgba(251,255,31,1) 100%, rgba(251,77,189,1) 100%, rgba(252,112,148,1) 100%);
 }
 
 .home-title {
@@ -84,39 +88,42 @@
   z-index: 5;
 }
 
+.about-stripe {
+
+  position: absolute;
+  top: -45%;
+  left: -25%;
+
+  z-index: 2;
+
+  height: 150vh;
+  width: 75vw;
+
+  /* background: #fbff1f; */
+  transform:rotate(25deg);
+  background: rgb(157,21,255);
+  background: linear-gradient(345deg, rgba(157,21,255,1) 0%, rgba(250,52,219,1) 0%, rgba(251,255,31,1) 56%);
+
+}
+
 #home {
-
-  margin:0 ! important;
-  padding:0 ! important;
-
   width: 100%;
   height: 85vh;
 
   background-color: #fff;
-
-}
-
-#signin-button {
-  color: white;
-  border: none;
-  padding-top: 2.5vh;
-  padding-bottom: 2.5vh;
-  padding-left: 3vh;
-  padding-right: 3vh;
-  border-radius: 15px;
-  background-color: #2C96FF;
-  transition: 0.3s;
-}
-
-#signin-button:hover {
-  color: white;
-  background-color: #2e2e2e;
 }
 
 #map {
   width: 100vw;
   height: 85vh;
   z-index: 1;
+}
+
+#about {
+
+  width: 100%;
+  height: 85vh;
+
 }
 
 html {
